[package]
name = "rust_py"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = {version = "1.2.0", features = ["unstable__schema", "derive"]}
borsh-ext = { git = "https://github.com/heliaxdev/borsh-ext", tag = "v1.2.0" }
namada_sdk = { git = "https://github.com/anoma/namada.git", rev = "v0.31.9", features = ["std"] }